@startuml data-model
title nautilus_zerodte — Custom Data Model (NT types referenced, not duplicated)

hide empty members
skinparam classAttributeIconSize 0

' ====================================================================
' Enums (custom routing / classification)
' ====================================================================
enum ActorKind {
  HUMAN
  AUTOMATION
}

enum RegimeTag {
  CHOP
  TREND
  PIN_RISK
  UNKNOWN
}

enum GateStage {
  EDGE
  LIQUIDITY
  REGIME
  SESSION
  GREEK
  OPERATIONAL
  RISK_ENGINE
}

' ====================================================================
' Trade intent — replaces StrategySignal.option: Side
' ====================================================================
class TradeIntent <<value>> {
  +intent_id: UUID
  +strategy_id: str
  +instrument_id: InstrumentId  ' CryptoOptionSpread / OptionSpread / BAG
  +edge_after_cost_bps: float
  +liquidity_score: float
  +regime_tag: RegimeTag
  +projected_greeks: dict
  +rationale: dict
}
note bottom of TradeIntent
  InstrumentId, OptionChainSlice, QuoteTick,
  OptionGreeks, Order, Portfolio — all NT types.
  Deribit: CryptoOptionSpread / combo.
  IB: OptionSpread / BAG.
  Do NOT duplicate as custom entities.
end note

' ====================================================================
' Risk policy — greek/desk rules (not a calculator)
' ====================================================================
class RiskPolicy <<value>> {
  +max_net_delta: float
  +max_net_gamma: float
  +max_net_vega: float
  +max_daily_loss: Decimal
  +max_concentration_per_strike: float
  +spot_shock: float = 0.01
  +vol_shock: float = 0.10
}

class RiskAssessment <<value>> {
  +intent_id: UUID
  +passed: bool
  +breached_rules: List<str>
  +projected_greeks: dict
  +current_greeks: dict
}

' ====================================================================
' Multi-strategy selection
' ====================================================================
class DiversificationPolicy <<value>> {
  +top_n: int
  +max_per_instrument: int
  +max_per_strategy: float
  +max_gross_risk_pct: float
}

' ====================================================================
' Learning + Journal (cross-cutting)
' ====================================================================
class LearningRecord <<entity>> {
  +record_id: UUID
  +intent_id: UUID
  +order_id: UUID          ' NT OrderFilled.client_order_id
  +realized_pnl: Decimal
  +theta_pnl: Decimal
  +gamma_pnl: Decimal
  +vega_pnl: Decimal
  +slippage_bps: float
  +commission: Decimal
  +edge_predicted_bps: float
  +edge_realized_bps: float
  +features: dict
}

class JournalEntry <<entity>> {
  +entry_id: UUID
  +ts: datetime
  +stage: GateStage
  +ref_id: UUID
  +level: str
  +payload: dict
}

' ====================================================================
' Removed types — NT owns (shown for reference only)
' ====================================================================
package "Removed — use NT instead" <<Rectangle>> #LightGray {
  class "MarketSnapshot" as REMOVED_MS <<removed>>
  class "IngestedDataset" as REMOVED_ID <<removed>>
  class "GreekBook" as REMOVED_GB <<removed>>
  class "OptionsChainSnapshot" as REMOVED_OCS <<removed>>
  class "OrderTicket" as REMOVED_OT <<removed>>
  class "PortfolioState" as REMOVED_PS <<removed>>
  class "StrategySignal" as REMOVED_SS <<removed>>
}
note bottom of REMOVED_MS
  NT replacements:
  QuoteTick, OptionChainSlice, OptionGreeks
  GreeksCalculator.portfolio_greeks()
  NT Order, Portfolio, position events
  TradeIntent (with structure InstrumentId)
end note

' ====================================================================
' Relationships
' ====================================================================
TradeIntent ..> RiskAssessment : evaluated by
TradeIntent --> RiskPolicy : constrained by
LearningRecord ..> TradeIntent : attributes
JournalEntry ..> TradeIntent : references
JournalEntry ..> LearningRecord : references
@enduml
